--- a/wave/src/main/resources/org/waveprotocol/wave/client/wavepanel/view/dom/full/Participants.css
+++ b/wave/src/main/resources/org/waveprotocol/wave/client/wavepanel/view/dom/full/Participants.css
@@ -73,7 +73,7 @@
   border-left: none;
   background: linear-gradient(180deg, #e8f4f8 0%, #fff 100%);
   overflow: hidden;
-  height: 50px;
+  height: 46px;
   min-width: 110px;  /* 1 avatar, and nice room for buttons. */
 
   /*
